secondfile/objects/Discount__c.object
<CustomObject>
    <fields>
        <fullName>Amount_off__c</fullName>
        <formula>PRD_Discount__r.Amount_Off__c</formula>
        <label>Amount off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Discounts</relationshipLabel>
        <relationshipName>Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_Name__c</fullName>
        <formula>PRD_Discount__r.Discount_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Plan_Level__c</fullName>
        <formula>PRD_Discount__r.Discount_Plan_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Plan Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRD_Discount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRD Discount</label>
        <referenceTo>PRD__c</referenceTo>
        <relationshipLabel>Discounts</relationshipLabel>
        <relationshipName>Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Off__c</fullName>
        <formula>PRD_Discount__r.Percent_Off__c</formula>
        <label>Percent Off</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Pricing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Pricing</label>
        <referenceTo>Product_Pricing__c</referenceTo>
        <relationshipLabel>Discounts</relationshipLabel>
        <relationshipName>Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPProduct</label>
        <referenceTo>SPProduct__c</referenceTo>
        <relationshipLabel>Discounts</relationshipLabel>
        <relationshipName>Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Discount</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Discount_Name__c</columns>
        <columns>Discount_Plan_Level__c</columns>
        <columns>Product_Pricing__c</columns>
        <columns>SPProduct__c</columns>
        <columns>PRD_Discount__c</columns>
        <columns>Percent_Off__c</columns>
        <columns>Deal__c</columns>
        <columns>Amount_off__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Discount_Name__c</field>
            <operation>contains</operation>
            <value>Mobil</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Discount ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>